Simplify List creation (mostly in Test)
Replaces `Arrays.asList` and `Collections.singletonList` with `List.of`.

Signed-off-by: Karsten Schnitter <k.schnitter@sap.com>